--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "09-calendar-mern",
   "private": true,
   "version": "0.0.0",
-  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "test": "jest --watchAll"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.1",
@@ -22,9 +22,17 @@
     "sweetalert2": "^11.6.16"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "@testing-library/react": "^13.4.0",
+    "@types/jest": "^29.2.4",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react": "^3.0.0",
+    "babel-jest": "^29.3.1",
+    "dotenv": "^16.0.3",
+    "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "vite": "^4.0.0"
   }
 }
